[package]
name = "lumatone_viz"
version = "0.1.0"
edition = "2024"
rust-version = "1.92.0"
repository = "https://github.com/HactarCE/lumatone_viz/"
license = "MIT OR Apache-2.0"

[dependencies]
clap = { version = "4.5.54", features = ["derive"] }
eframe = "0.33.3"
egui = "0.33.3"
eyre = "0.6.12"
itertools = "0.14.0"
log = "0.4.29"
midir = "0.10.3"
midly = "0.5.3"
rust-ini = "0.21.3"
